--- a/resources/admin/css/sprout-invoice.css
+++ b/resources/admin/css/sprout-invoice.css
@@ -1943,3 +1943,155 @@ input#sa_recurring_invoice_custom_freq {
 .modal-open .redactor-dropdown {
 	z-index: 100051 !important;
 }
+
+
+/** Addon Settings */
+
+.check_slider input[type=checkbox] {
+	visibility: hidden;
+}
+.check_slider {
+	width: 120px;
+	height: 40px;
+	background: #eee;
+	margin-top: -40px;
+	margin-bottom: 40px;
+	border-radius: 50px;
+	position: relative;
+	left: -140px;
+	top: 80px;
+	display: block;
+}
+.check_slider:before {
+	content: 'On';
+	position: absolute;
+	top: 12px;
+	left: 13px;
+	height: 2px;
+	color: rgb(139,185,82);
+	font-size: 16px;
+}
+.check_slider:after {
+	content: 'Off';
+	position: absolute;
+	top: 12px;
+	left: 84px;
+	height: 2px;
+	color: #111;
+	font-size: 16px;
+}
+
+/**
+ * Create the pill to click
+ */
+.check_slider label {
+	display: block;
+	width: 52px;
+	height: 22px;
+	border-radius: 50px;
+
+	-webkit-transition: all .5s ease;
+	-moz-transition: all .5s ease;
+	-o-transition: all .5s ease;
+	-ms-transition: all .5s ease;
+	transition: all .5s ease;
+	cursor: pointer;
+	position: absolute;
+	top: 9px;
+	z-index: 1;
+	left: 12px;
+	background: #999;
+}
+
+/**
+ * Create the checkbox event for the label
+ */
+.check_slider input[type=checkbox]:checked + label {
+	left: 60px;
+	background: rgb(139,185,82);
+}
+
+
+
+#ajax_saving {
+	color: rgb(238,238,238);
+	font-weight: 700;
+	font-size: 1.5em;
+	text-align: center;
+	padding: 10px 20px 10px 20px;
+	border-radius: 5px;
+	background: rgb(35,40,45);
+	box-shadow: 1px 2px 6px rgba(0,0,0, 0.5);
+	z-index: 20000;
+}
+
+
+
+
+/**
+ * Downloads
+ */
+
+	#marketplace_view .products_grid {
+		margin-top: 45px; }
+		#marketplace_view .products_grid .section {
+			text-align: center; }
+			#marketplace_view .type-download {
+				min-height: 450px;
+				width: 33.333333%;
+				float: left;
+				position: relative;
+				padding-left: 15px;
+				padding-right: 15px;
+				display: block;
+				box-sizing: border-box;
+			}
+			@media (max-width: 991px) {
+				#marketplace_view .products_grid .section {
+					margin-bottom: 40px; } }
+			#marketplace_view .products_grid .section .pic {
+				display: inline-block;
+				position: relative;
+				padding: 15px;
+				background: #f5f5f5;
+				box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.45), inset 0px 0px 1px 1px white; }
+			#marketplace_view .products_grid .section .pic img {
+				width: 100%;
+				height: auto;
+			}
+			#marketplace_view .products_grid .section .info {
+				margin-top: 25px;
+				text-align: center; }
+				@media (min-width: 992px) {
+					#marketplace_view .products_grid .section .info {
+						margin-left: 5%;
+						margin-right: 5%;
+						width: 90%;
+						text-align: left; } }
+				#marketplace_view .products_grid .section .info strong {
+					font-weight: 500;
+					font-size: 18px;
+					color: #555; }
+				#marketplace_view .products_grid .section .info p {
+					color: #666;
+					margin-top: 15px;
+					line-height: 22px; }
+#marketplace_view .products_grid .section .pic .download_purchase_link {
+	position: absolute;
+	bottom: -15px;
+	right: -15px;
+}
+#download .download_info {
+	margin-top: 5px
+}
+#download .entry-title {
+	margin-top: 5px;
+}
+#marketplace_view span.bundled_addon {
+    display: block;
+    padding: 5px 10px;
+    background-color: rgb(139,185,82);
+    color: #fff;
+    font-weight: 600;
+    text-transform: uppercase;
+}
